fix minor spacing issues for web view

--- a/web/yaraku_web/static/style.css
+++ b/web/yaraku_web/static/style.css
@@ -1,7 +1,3 @@
-h1 {
-	text-align: center;
-}
-
 .yaraku-icon {
 	display: inline-block;
 	color: white;
@@ -11,6 +7,6 @@ h1 {
 	border-radius: 10px;
 }
 
-#booktable {
-	margin-top: 20px !important;
+#bookTable button.btn {
+	line-height: 1.0 !important;
 }
